--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
 	"categories": [
 		"Other"
 	],
+	"repository": {
+		"type": "git",
+		"url”: “https://github.com/stremovsky/codeseek-vscode.git"
+	},
 	"activationEvents": [
 		"onCommand:extension.codeseek"
 	],
