--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
 	"displayName": "Codeseek",
 	"description": "Search engine for developers",
 	"version": "0.0.1",
+	"publisher": "codeseek",
+	"license": "MIT",
 	"engines": {
 		"vscode": "^1.32.3"
 	},
@@ -11,7 +13,7 @@
 	],
 	"repository": {
 		"type": "git",
-		"url”: “https://github.com/stremovsky/codeseek-vscode.git"
+		"url": "https://github.com/stremovsky/codeseek-vscode.git"
 	},
 	"activationEvents": [
 		"onCommand:extension.codeseek"
